优化:完善查看历史流转逻辑
